# osc2k8062

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  configure.in  dmx-sender.c  osc2k8062.c  osc2k8062.h  oscsenddmx  rgb_ramp.rb
macosx/: Info.plist  install.sh
macosx/English.lproj/: InfoPlist.strings
macosx/k8062.xcodeproj/: project.pbxproj
